# cpp_practice

./: .gitignore  .gitmodules  find.sh  run.sh
arrow/10_array_udf_example/: CMakeLists.txt  array_udf_example.cpp
arrow/11_parquet_read_write/: parquet_read_write.cpp
arrow/12_row_wise_conv/: CMakeLists.txt  row_wise_conv.cpp
arrow/13_parquet_read_write_new/: CMakeLists.txt  parquet_read_write.cpp
arrow/1_basic_data_types/: CMakeLists.txt  int16_arr.cpp  int8_arr.cpp  record_batch_demo.cpp  table_demo.cpp
arrow/2_file_io/: CMakeLists.txt  arrow_file_gen.cpp  conanfile.txt  csv_file_read_write.cpp  file_gen.cc  file_gen.h  ipc_file_read_write.cpp  parquet_file_read_write.cpp
arrow/3_compute/: CMakeLists.txt  compute_add.cpp  data_gen_test.cpp  element_index.cpp  element_wise_add.cpp  gen_data.cc  gen_data.h
arrow/4_dataset/: CMakeLists.txt  README.md  dataset_test.cpp
arrow/5_compute_and_write_csv/: CMakeLists.txt  compute_and_write_csv.cpp
arrow/6_dataset_doc_example/: CMakeLists.txt  data_gen.cpp  filter_and_select_dataset.cpp  filter_partitioned_dataset.cpp  gen_data.cc  gen_data.h  project_dataset.cpp  scan_partitioned_dataset.cpp  scan_whole_dateset.cpp  select_and_project_dataset.cpp
arrow/7_dataset_parquet_scan_example/: CMakeLists.txt  dataset_parquet_scan_example.cpp
arrow/8_hash_join_example/: CMakeLists.txt  hash_join.cpp
arrow/9_udf_in_dataset/: CMakeLists.txt  udf_in_dataset.cpp
asio_exercise/01_asio_part_1/: CMakeLists.txt  main.cpp
asio_exercise/01_asio_part_1_async/: CMakeLists.txt  main.cpp
asio_exercise/02_asio_part2_simple_server_client/: CMakeLists.txt  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
asio_exercise/03_server_client_validation/: CMakeLists.txt  file_log.h  net_client.h  net_common.h  net_connection.h  net_server.h  simple_client.cpp  simple_server.cpp
basics/10_boost_fs1/: CMakeLists.txt  main.cpp
basics/10_int_str/: main.cpp
basics/10_test_regex/: CMakeLists.txt  main.cpp
basics/11_map_modify/: CMakeLists.txt  main.cpp
basics/12_compare_float/: CMakeLists.txt  main.cpp
basics/13_cmake_define/: CMakeLists.txt  main.cpp
basics/14_batch/: CMakeLists.txt  main.cpp
basics/15_back_insert/: CMakeLists.txt  main.cpp
basics/16_boost_log/: CMakeLists.txt  main.cpp
basics/17_virtual/: CMakeLists.txt  oop_test.cpp  shape.hpp
basics/18_virtual_2/: CMakeLists.txt  oop_test.cpp  shape.hpp
basics/19_string_test2/: CMakeLists.txt  oop_test.cpp
basics/20_timestamp/: CMakeLists.txt  oop_test.cpp
basics/21_unordered_map/: CMakeLists.txt  oop_test.cpp
basics/45_matplot_lib/: CMakeLists.txt  consts.cc  consts.h  main.cpp  point.h
basics/49_vector_void_ptr_and_size/: CMakeLists.txt  main.cpp
basics/53_initializer_list/: CMakeLists.txt  main.cpp
basics/54_boss_crawer/: CMakeLists.txt  CMakeUserPresets.json  boss_craw.cpp  conanfile.txt
basics/54_boss_crawer/include/beans/: beans.h
basics/54_boss_crawer/include/utils/: data_analysis.h  data_extract.h  funcs.h  http_req.h
basics/54_boss_crawer/src/utils/: data_analysis.cc  data_extract.cc  funcs.cc  http_req.cc
c11_concurrency/: README.md
c_data_struct_and_file_s/04_07/: CMakeLists.txt  readdir1.cpp  readdir2.cpp  readdir3.cpp
cmake_tutorial/3_git_sub_module_cmake/: CMakeLists.txt  main.cpp  shell.sh
cmake_tutorial/6_install_your_software/: CMakeLists.txt
cmake_tutorial/7_install_with_cpack/: CMakeLists.txt  License.txt  main.cpp  olas_config.h.in
cmake_tutorial/7_install_with_cpack/lib/: CMakeLists.txt  adder.cpp  shell.sh
cmake_tutorial/8_find_library/: CMakeLists.txt  main.cpp  shell.sh
cmake_tutorial/9_find_package/: CMakeLists.txt
cmake_tutorial/9_find_package/cmake/: FindGLEW.cmake
complete_modern_cpp/181_concurrency_basics_qt/: CMakeLists.txt  window.cpp  window.h  window.ui
cpp_22_02/10_q10_iterswap/: CMakeLists.txt  build.bat  main.cpp
cpp_22_02/11_q11_max_element/: CMakeLists.txt  main.cpp
cpp_22_02/13_q13_vector_deque_and_set/: CMakeLists.txt  main.cpp
cpp_22_02/15_swap_ranges/: CMakeLists.txt  main.cpp
cpp_22_02/17_q17_std_bind/: CMakeLists.txt  main.cpp
cpp_22_02/18_q_18_deque_swap_range/: CMakeLists.txt  main.cpp
cpp_22_02/21_q21_cin_bad/: CMakeLists.txt  main.cpp
cpp_22_02/22_q22_vect_and_set/: CMakeLists.txt  main.cpp
cpp_22_02/27_set_symetric_difference/: CMakeLists.txt  main.cpp
cpp_22_02/28_q28_bind2nd/: CMakeLists.txt  main.cpp
cpp_22_02/2_q2_rotate/: CMakeLists.txt  main.cpp
cpp_22_02/30_q30_count/: CMakeLists.txt  main.cpp
cpp_22_02/31_q31_includes/: CMakeLists.txt  main.cpp
cpp_22_02/34_std_replace/: CMakeLists.txt  main.cpp
cpp_22_02/36_std_deque_insert/: CMakeLists.txt  main.cpp
cpp_22_02/37_std_ios_hex/: CMakeLists.txt  main.cpp
cpp_22_02/38_std_hex_2/: CMakeLists.txt  main.cpp
cpp_22_02/39_std_search_n/: CMakeLists.txt  main.cpp
optimize/: CMakeLists.txt  algorithms_test.cpp  allocator_test.cpp  cache_test.cpp  calling_test.cpp  class_new_test.cpp  copy_elision_test.cpp  currency_test.cpp  dispatch_test.cpp  fix_block_memory_manager_test.cpp  fixed_string_test.cpp  fp_test.cpp  hashes_test.cpp  insert_ctrl_test.cpp  list_allocator_test.cpp  log_test.cpp  maps_test.cpp  old_stl_allocator_test.cpp  read_stream_test.cpp  statement_test.cpp  stl_list_test.cpp  struct_offset_test.cpp
optimize/impl/: cache_test_impl.cpp  calling_imp.cpp  class_new_impl.cpp  concurrency_impl.cpp  copy_elision_impl.cpp  deque.cpp  fixed_block_memory_manager_test_impl.cpp  fixed_string.cpp  forward_list.cpp  fp_impl.cpp  insert_ctrl_impl.cpp  list.cpp  list_allocator_impl.cpp  log_impl.cpp  map.cpp  new_del.cpp  old_block_allocator.cpp  read_stream_impl.cpp  search_algorithms.cpp  search_hash.cpp  search_maps.cpp  statements.cpp  struct_offset_impl.cpp  unordered_map.cpp  vector.cpp
optimize/include/: array_iterator.h  block_mgr.h  block_mgr.inl  calling.h  charbuf.h  fixed_string.h  hash.h  new_del.h  old_block_allocator.h  simple_allocator.h
shell/: Dockerfile  DockerfileCPP  generate_printer.sh  guid.ipynb  local_start.sh
simple_learn/: Dockerfile  local_start.sh
(+2288 files in other folders)
